--- a/css/cust.css
+++ b/css/cust.css
@@ -215,17 +215,17 @@ span.rounded-circle {
     height: 90px;
     margin: 6px;
     background-color: #ffffff;
-	border:1px solid #cdcdcd;
+  border:1px solid #cdcdcd;
   }
   
 #imgarrow{width:80px; height:90px; padding-top:20px;}
 .par hr{ border-bottom:1px solid #f3f3f3}
 /*----------self declaration--------*/
 #self1{ background-color:#0e72c8; 
-		height:200px;
-		background-attachment: fixed;
-		margin-top:20px;
-		}
+    height:200px;
+    background-attachment: fixed;
+    margin-top:20px;
+    }
 #cnt {
     margin-left: 20%;
     margin-right: 20%;
@@ -237,10 +237,10 @@ span.rounded-circle {
 #cnt a{ background-color:#0e72c8; color:#ffffff}
 @media (max-width: 600px){
 #cnt{
-	margin-left:10%;
-	margin-right:10%;
-	margin-top: -270px;
-	}
+  margin-left:10%;
+  margin-right:10%;
+  margin-top: -270px;
+  }
 .jmbtext{ font-size:40px;}
 .txtprt2{ font-size:9px;}
 .sd{ font-size:20px}
@@ -249,21 +249,21 @@ span.rounded-circle {
 /*-///////////////////////-*/
 #self2{}
 #self2_ch{
-	padding:20px 0px;
-	margin-left:20%;
-	margin-right:20%;
-	margin-top:60px;
-	margin-bottom:60px;
-	 background-color:#0e72c8;
-	 color:#ffffff;
-	}
+  padding:20px 0px;
+  margin-left:20%;
+  margin-right:20%;
+  margin-top:60px;
+  margin-bottom:60px;
+   background-color:#0e72c8;
+   color:#ffffff;
+  }
 #self2_ch h2{font-weight:normal;}
 #self2_ch input[type=text],select{padding: 5px;}
 @media (max-width: 600px){
-#self2_ch{	margin-left:10%;
-			margin-right:10%;
-			margin-top:30px;
-			}
+#self2_ch{  margin-left:10%;
+      margin-right:10%;
+      margin-top:30px;
+      }
 }
 /*----------image block--------------*/
 #ib{font-size:0px}
@@ -1588,9 +1588,9 @@ padding: 10px;
 }
 .td-mark-rg_card{
   position: relative;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   width: 100%;
   height: 100%;
   background: #fff;
@@ -1631,7 +1631,7 @@ padding: 10px;
    padding-bottom: 10px;
 }
 .td-mark-rg_title p{
-   font-size: 12px;
+   font-size: 14px;
    font-weight: 600;
    color: #5d5858;
    padding-top: 20px;
@@ -1712,7 +1712,7 @@ padding: 10px;
   padding-bottom: 20px;
 }
 .td-mark_document p{
-  font-size: 14px;
+  font-size: 15px;
 }
 /* *******Procedure-td-mark ****/
 
@@ -1729,7 +1729,7 @@ padding: 10px;
   /* align-items: center; */
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 80px 0;
+  padding: 40px 0;
 }
 .procedure-td-mark_list-wrapper{
   padding: 15px;
@@ -1752,11 +1752,19 @@ padding: 10px;
   color: #676767;
 }
 .procedure-td-mark_img-holder{
-    max-width: 50px;
+    width: 70px;
     height: 38px;
     overflow: hidden;
-    background: #676767;
+    background: #0807a1;
     margin-right: 15px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.procedure-td-mark_img-holder h6{
+  padding-top: 5px;
+  font-size: 17px;
 }
 .procedure-td-mark_img-holder img{
   width: 100%;
@@ -1776,14 +1784,29 @@ padding: 10px;
 }
 .benefit-td-mark_list-1{
   padding: 15px 0;
+  text-align: center;
 }
 .benefit-td-mark_list-1 h3{
   font-size: 16px;
   font-weight: 700;
+  margin-top: 20px;
 }
 .benefit-td-mark_list-1 p{
   font-size: 14px;
   color: #676767;
+}
+.benefit-td-mark_list-img{
+    width: 80px;
+    height: 80px;
+    background: blue;
+    border: 3px solid #0807a1;
+    border-radius: 50%;
+    margin: 0 auto 5px;
+    overflow: hidden;
+}
+.benefit-td-mark_list-img img{
+  height: 100%;
+  object-fit: cover;
 }
 /* *******Register Trademark Online *****/
 .reg-td-mark_outter{
@@ -1860,8 +1883,8 @@ padding: 10px;
     align-items: center;
     justify-content: center;
     background: #fff;
-    width: 200px;
-    height: 200px;
+    width: 170px;
+    height: 170px;
     padding: 30px;
     overflow: hidden;
     margin: 0 auto;
@@ -1879,6 +1902,7 @@ box-shadow: -8px 4px 39px -6px rgba(28,27,28,0.62);
   text-align: center;
   color: #fff;
   text-decoration: none;
+  font-size: 18px;
 }
 /******* Who can all apply for a Trademark? ******/
 .apply-td-mark_outter{
@@ -2123,7 +2147,7 @@ input[type="checkbox"]:focus{
   padding: 40px 0;
 }
 .food-license_outter{
-  background: #eeeeee;
+  background: #dee3f9;
   padding: 40px 0;
 }
 .food_text h3{
@@ -2178,7 +2202,13 @@ input[type="checkbox"]:focus{
  background-size: cover;
  padding: 88px 0;
 }
-
+.apeda-catagory h5{
+  padding-top: 20px;
+}
+.apeda-catagory a{
+  color: #333 !important;
+  text-decoration: none;
+}
 .apeda-reg_outter {
     background: #3583e5;
     padding: 20px 0;
@@ -2188,9 +2218,9 @@ input[type="checkbox"]:focus{
     padding: 20px 0;
 }
 .apeda-catagory-box{
-    width: 100%;
+    max-width: 200px;
     box-shadow: 0px 0px 20px 7px rgba(0, 0, 0, 0.18) !important;
-    height: 255px;
+    height: 177px;
     padding: 10px;
     background: #f6f6f6;
     box-shadow: none;
@@ -2213,18 +2243,17 @@ box-shadow: 0px 0px 20px 7px rgba(0, 0, 0, 0.18);
   padding-top: 20px;
 }
 .apeda-reg-process_1{
-  display: flex;
-  justify-content: flex-start;
+  text-align: center;
   margin: 30px 0;
 }
 .apeda-reg-process_3{
-  display: flex;
-  justify-content: flex-end;
+  text-align: center;
   margin: 30px 0;
 }
 .apeda-reg-process_box{
     max-width: 150px;
     height: 150px;
+    margin: 0 auto;
     background: #676767;
     overflow: hidden;
     /* border: 1px solid #676767; */
@@ -2256,6 +2285,8 @@ box-shadow: 0px 0px 20px 7px rgba(0, 0, 0, 0.18);
   padding: 0 ;
   transform: scale(1.0);
   transition: 0.5s all;
+  z-index: 1;
+  overflow: hidden;
 }
 
 .fees-price{
@@ -2378,4 +2409,290 @@ box-shadow: 0px 0px 20px 7px rgba(0, 0, 0, 0.18);
 .fees:hover{
  transform: scale(1.1);
  box-shadow: 0px 0px 20px 7px rgba(0, 0, 0, 0.18) ;
+}
+/* ********* ISO ***********/
+.iso-banner_outter{
+  background: url('../images/conscompl_banner.jpg') no-repeat;
+  background: #6dc0f2;
+  background-size: cover;
+  background-position: 100% 100%;
+  padding: 80px 0;
+}
+.iso-banner_form{
+ display: flex;
+ justify-content: flex-end;
+}
+.iso_from{
+  width: 415px;
+  background: #b6b6b6 !important;
+  box-shadow: 0px 4px 5px 2px rgb(39 38 39 / 29%);
+}
+.iso_from .form-control {
+    background: #ffffff;
+}
+.iso-certificate_outter{
+  padding: 40px 0;
+}
+.iso-form-text{
+  color: #010000;
+}
+.iso-process_outter{
+  padding: 40px 0;
+}
+.iso-document_requd{
+  padding: 139px 0;
+}
+.iso-standards_outter{
+  background: #e8e9ea;
+  padding: 40px 0;
+}
+.iso_stand {
+  text-align: center;
+}
+.iso_stand img{
+  width: 457px; 
+}
+.iso_stand_item-box{
+  background: #fff;
+  margin-top: 20px;
+}
+.iso_stand_item-box h3{
+  color: #0841c4;
+  font-size: 16px;
+  text-align: center;
+  font-weight: 600;
+  padding: 36px 15px;
+}
+.iso_stand_item-footer{
+  background:#0841c4;
+  padding: 10px;
+  cursor: pointer;
+}
+.iso_stand_item-footer h4{
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 0;
+}
+.iso_stand_item-footer h4 i{
+  font-size: 12px;
+}
+.iso-stand-item_dropmenu{
+  background:#0841c4;
+  text-align: center;
+  color: #fff;
+  padding:  15px;
+  display: none;
+}
+.iso-stand-item_dropmenu p{
+  font-size: 14px;
+  margin-bottom: 0;
+}
+.iso-rg-pkg img{
+  object-fit: cover;
+}
+/* ******** ice **********/
+.ice_img{
+  height: 1215px;
+  border: 1px solid #0642ee;
+  overflow: hidden;
+}
+.iec-new-license{
+  background:#154bf4;
+  color: #fff;
+  margin-top: 15px;
+  text-align: center;
+  transition: 0.5s all;
+}
+.iec-new-license h2{
+  padding-top: 11px;
+}
+.iec-new-license_contant{
+    max-width: 280px;
+    margin: 0 auto;
+}
+.iec-new-license_contant ul{ 
+  list-style: none;
+}
+.iec-new-license_contant ul li{
+  border-bottom: 1px solid #b1b1b1;
+  text-align: center;
+  font-size: 17px;
+}
+.iec-rg_head{
+
+}
+.iec-rg_head .img-holder img{
+  width: auto;
+}
+.ice-license-img .img-holder{
+  height: 205px;
+}
+.iec-process-1{
+  text-align: center;
+}
+.iec-img-box{
+  width: 150px;
+  height: 150px;
+  background: #0a5bea;
+  padding: 0;
+}
+.iec-img-box img{
+  /* width: 100%; */
+  height: 100%;
+  object-fit: cover;
+}
+.iec-table thead{
+  background: #0a5bea;
+}
+.iec-table tbody{
+  background: #e8e8e8;
+}
+
+.iec-table thead th{
+  color: #fff;
+}
+ .iec-table .table th {
+   /*  font-size: 15px; */
+    text-align: center;
+    border-top: 1px solid #dee2e6 !important;
+}
+.iec-table .table td{
+  font-size: 13px;
+}
+.iec-advantage_outter{
+  background: #eeeeee;
+  padding: 40px 0;
+}
+.ice-advantage-card{
+  max-width: 930px;
+  width: 100%;
+  margin: 0 auto;
+  background: #fff;
+  border-left: 5px solid #0a5bea;
+  padding: 20px 0;
+  cursor: pointer;
+  transform: scale(1.0);
+  transition: 0.5s all;
+}
+.ice-advantage-card:hover{
+  transform: scale(1.1);
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.15);
+}
+.ice-advantage-titel{
+  padding: 0 40px;
+}
+.ice-advantage-titel h3{
+ font-size: 18px;
+}
+.ice-advantage-titel p{
+  margin-bottom: 0;
+  font-size: 14px;
+}
+.iec-import-export_outter{
+  padding: 55px 0;
+}
+.iec-benifits-why-legalution_outter{
+  background: #eeeeee;
+  padding: 40px 0;
+}
+.ice-whn-code{
+  padding: 15px;
+}
+.ice-whn-code h2{
+  color:#0a5bea ;
+  font-size: 31px;
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 2px solid red;
+}
+.ice-whn-code ul{
+  /* display: flex; */
+  list-style: none;
+}
+.iec-whn-req1{
+  padding: 20px 0 0 10px;
+  display: flex;
+}
+.iec-whn-req1 label{
+  display: flex;
+}
+.iec-whn-req1 label span{
+  font-size: 15px;
+  margin-top: -3px;
+}
+.iec-whn-req1 input[type="checkbox"] + label:before{
+  width: 36px;
+  height: 23px;
+  background: #0e72c8;
+  border: 1px solid #0e72c8;
+  color: #fff;
+  content: "\2713";
+  text-align: center;
+  padding-top: 3px;
+}
+.req2 input[type="checkbox"] + label:before{
+  width: 30px;
+  height: 23px;
+}
+.req3 input[type="checkbox"] + label:before{
+  width: 50px;
+  height: 23px;
+}
+.fees-from-cntr{
+ padding: 106px 0;
+}
+.fees-from{
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ top: 0;
+ left: 0;
+ z-index: 2;
+ padding: 40px;
+ 
+}
+#fees-1{
+  display: none;
+  background: #08d183;
+}
+#fees-2{
+  display: none;
+  background: #eb0f4d;
+}
+#fees-3{
+  display: none;
+  background: #fca710;
+}
+#submit-3{
+  background: #fff !important;
+  color: #fca710 !important;
+  border: 1px solid #fca710 !important;
+}
+#submit-2{
+  background: #fff !important;
+  color: #eb0f4d !important;
+  border: 1px solid #eb0f4d !important;
+}
+
+#submit-1{
+  background: #fff !important;
+  color: #08d183 !important;
+  border: 1px solid #08d183 !important;
+}
+.close_form{
+  position: absolute;
+  top: 38px;
+  right: 30px;
+  left: auto;
+  bottom: 0;
+  cursor: pointer;
+  color: #fff;
+}
+
+.close_form i{
+  font-size: 24px;
+}
+.form-width{
+  max-width: 80%;
 }
